# prl-devops-ui

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  feature-auth-realtime-events.md  feature-claim-grouping-matrix.md  feature-orchestrator-async-jobs.md  feature-role-claims-and-users.md  feature-vm-snapshots-ui.md  feature_user_configs.md  index.html  init-ruflo.sh  manifest-metadata-management.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/agents/: github-actions-specialist.md  react-perf-reviewer.md  react-security-analyst.md
.github/: CODEOWNERS  CONTRIBUTING.md  auto_assign.yml  boring-cyborg.yml  dependabot.yml  pull_request_template.md  security.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  epic.yml  feature-request.yml  product-backlog-item.yml
.github/workflow_scripts/: cleanup-ghcr-tags.sh  generate-changelog.sh  get-latest-changelog.sh  increment-version.sh  (+1 more)
.kilo/: package-lock.json
docker/: entrypoint.sh  nginx.conf
docs/: mvp.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign.cmd  sign.ps1
src-tauri/src/: binary_service.rs  lib.rs
test/: docker-compose.yml
(+367 files in other folders)
